--- a/WebApplication4/WebApplication4/Views/Ventas/CarritoVentas.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/CarritoVentas.cshtml
@@ -25,7 +25,7 @@
 <div class="container-fluid">
     <div class="col-md-5">
         <ol class="breadcrumb">
-            <li><a href="@Url.Action("Index2","Home")">Inicio</a></li>
+            <li><a href="@Url.Action("Busqueda","Evento")">Buscar eventos</a></li>
             <li class="active">Carrito de Ventas</li>
         </ol>
     </div>
@@ -44,7 +44,7 @@ else
             <div class="col-md-12">                
                 <div class="row form-group">
                     <div class="col-md-10 col-sm-8 col-xs-6">
-                        <a class="btn btn-success pull-right" href="@Url.Action("VenderEntrada", "Ventas")"><span class="glyphicon glyphicon-usd"></span> Vender</a>
+                        <a class="btn btn-success pull-right" href="@Url.Action("VenderEntrada", "Ventas")"><span class="glyphicon glyphicon-usd"></span> Vender entradas</a>
                     </div>
                     <div class="col-md-2 col-sm-4 col-xs-6">
                         <a class="btn btn-danger pull-right" onclick="quitarCarrito()"><span class="glyphicon glyphicon-trash"></span> Quitar</a>
