--- a/WebApplication4/WebApplication4/Views/Ventas/VenderEntrada.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/VenderEntrada.cshtml
@@ -29,7 +29,10 @@
         border: 2px solid black;
         border-radius: 10px;
     }
-    #formPost{padding:15px}
+
+    #formPost {
+        padding: 15px;
+    }
 </style>
 
 <div class="container-fluid">
@@ -38,7 +41,6 @@
             <li><a href="@Url.Action("Busqueda", "Evento")">Buscar eventos</a></li>
             <li class="active">Pagar Entrada</li>
         </ol>
-        @Html.HiddenFor(c => c.modalidad)
     </div>
 </div>
 
@@ -101,8 +103,8 @@
             <h3><span class="fa fa-user"></span> Datos del comprador</h3><hr /><br />
             <div class="form-horizontal">
                 <div class="col-md-3">
-                    @Html.CheckBox("registrado", new { @onchange = "cambio()" })                    
-                    @Html.Label("lblReg", "¿Es usuario registrado?")                    
+                    @Html.CheckBox("registrado", new { @onchange = "cambio()" })
+                    @Html.Label("lblReg", "¿Es usuario registrado?")
                 </div>
                 <label for="dni" class="control-label col-md-2">Tipo Doc:</label>
                 <div class="form-group col-md-3">
@@ -117,14 +119,14 @@
                     <input id="idBusq" type="text" class="form-control" readonly="readonly">
                     <span class="input-group-btn"><button id="btnBusqueda" onclick="busca()" class="btn btn-primary" type="button" disabled><span class="glyphicon glyphicon-search"></span></button></span>
                 </div>
-             </div> <br />           
+            </div> <br />
         </div>
         @using (Html.BeginForm("VenderEntrada", "Ventas", FormMethod.Post, new { @id = "formPost" }))
         {
             @Html.HiddenFor(c => c.modalidad)
             <div class="cold-md-12">
                 <div class="row form-horizontal">
-                    <div class="col-md-3">                        
+                    <div class="col-md-3">
                     </div>
                     @Html.LabelFor(c => c.Nombre, new { @class = "control-label col-md-2" })
                     <div class="col-md-3">
@@ -137,7 +139,7 @@
                         @Html.ValidationMessageFor(c => c.Dni)
                     </div>
                 </div><br />
-                
+
                 <h3><span class="fa fa-credit-card "></span> Información de la tarjeta</h3><hr /><br />
                 <div class="row form-horizontal">
                     @Html.LabelFor(c => c.idBanco, new { @class = "control-label col-md-6" })
@@ -190,7 +192,7 @@
                     </div>
                 </div><br />
 
-                <h3><span class="fa fa-money"></span> Montos y dsctos.</h3><hr /><br>                
+                <h3><span class="fa fa-money"></span> Montos y dsctos.</h3><hr /><br>
                 <div class="row form-horizontal">
                     <div class="col-md-6">
                     </div>
@@ -202,12 +204,12 @@
                     <div class="col-md-2">
                         @Html.TextBoxFor(c => c.Importe, new { @class = "form-control", @Value = importe, @readonly = "readonly", @type = "number" })
                     </div>
-                </div> <br />                   
-                    
+                </div> <br />
+
                 <h3><span class="fa fa-credit-card"></span> Métodos de Pago</h3><hr /><hr /><br>
                 <div class="row">
                     <div id="efectivo" class="col-md-4">
-                        <center class="row">                            
+                        <center class="row">
                             @if (Model.modalidad == 1)
                             {
                                 <input type="radio" name="TipoPago" value="1" onclick="cambioPago()" checked="checked">
@@ -216,7 +218,7 @@
                             {
                                 <input type="radio" name="TipoPago" value="1" onclick="cambioPago()">
                             }
-                            <label>Efectivo:</label>
+                            <label>Efectivo</label>
                         </center><br />
                         <div class="row form-group">
                             @Html.LabelFor(c => c.Descuento, new { @class = "control-label col-md-3" })
@@ -256,7 +258,7 @@
                         </div>
                     </div>
                     <div id="tarjeta" class="col-md-4">
-                        <center class="row">                            
+                        <center class="row">
                             @if (Model.modalidad == 2)
                             {
                                 <input type="radio" name="TipoPago" value="2" onclick="cambioPago()" checked="checked">
@@ -265,7 +267,7 @@
                             {
                                 <input type="radio" name="TipoPago" value="2" onclick="cambioPago()">
                             }
-                            <label>Tarjeta:</label>
+                            <label>Tarjeta</label>
                         </center><br />
                         <div class="row form-group">
                             @Html.LabelFor(c => c.Descuento, new { @class = "control-label col-md-3" })
@@ -305,7 +307,7 @@
                         </div>
                     </div>
                     <div id="mixto" class="col-md-4">
-                        <center class="row">                            
+                        <center class="row">
                             @if (Model.modalidad == 3)
                             {
                                 <input type="radio" name="TipoPago" value="3" onclick="cambioPago()" checked="checked">
@@ -314,7 +316,7 @@
                             {
                                 <input type="radio" name="TipoPago" value="3" onclick="cambioPago()">
                             }
-                            <label>Mixto:</label>
+                            <label>Mixto</label>
                         </center><br />
                         <div class="row form-group">
                             @Html.LabelFor(c => c.Descuento, new { @class = "control-label col-md-3" })
@@ -356,12 +358,12 @@
                 </div><br />
 
                 <div class="row">
-                    <center >
+                    <center>
                         <button type="submit" onclick="return llenaArreglo()" class="btn btn-default btn-primary"><span class="fa fa-usd fa-lg"></span> Finalizar venta</button>
                     </center>
                 </div><br />
             </div>
         }
-    </div>    
+    </div>
 </div>
 <script type="text/javascript" src="@Url.Content("/Scripts/Ventas/VenderEntradaHelper.js")"></script>
