escondiendo detalles xd

--- a/WebApplication4/WebApplication4/Views/Ventas/VerDetalle.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/VerDetalle.cshtml
@@ -182,8 +182,8 @@
                             <th>Codigo Asiento.</th>
                             <th>Ubicación Asiento.</th>
                             <th>Estado</th>
-                            <th>Tipo Doc</th>
-                            <th>Doc Asociado</th>
+                            <!--<th>Tipo Doc</th>
+                            <th>Doc Asociado</th>-->
                             <th>Precio</th>
                         </tr>
                     }
@@ -205,8 +205,8 @@
                                 <td>@axf[x].codAsiento</td>
                                 <td>@("F:" + asientos[x].columna + ", C:" + asientos[x].fila)</td>
                                 <td>@axf[x].estado</td>
-                                <td>@axf[x].TipoDocAsociado</td>
-                                <td>@axf[x].DocAsociado</td>
+                                <!--<td>axf[x].TipoDocAsociado</td>
+                                <td>axf[x].DocAsociado</td>-->
                                 <td>@axf[x].PrecioPagado</td>
                             </tr>
                         }
