--- a/WebApplication4/WebApplication4/Views/Ventas/GeneraTicket.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/GeneraTicket.cshtml
@@ -16,21 +16,17 @@
 
 
 
-
-
-
 <!DOCTYPE html>
 
 <html>
 <head>
-
-    <script src="@Server.MapPath("~/Scripts/jquery-1.10.2.js")"></script>
-    <script src="@Server.MapPath("~/Scripts/jquery-barcode.min.js")"></script>
+    <script src="@Server.MapPath("~/Scripts/jquery-2.1.4.min.js")"></script>
     <script src="@Server.MapPath("~/Scripts/jquery.qrcode.min.js")"></script>
+    <script src="@Server.MapPath("~/Scripts/jquery-barcode.min.js")"></script>
     <script src="@Server.MapPath("~/Scripts/bootstrap.js")"></script>
     <link href="@Server.MapPath("~/Content/bootstrap-theme.min.css")" rel="stylesheet" />
     <link href="@Server.MapPath("~/Content/bootstrap.min.css")" rel="stylesheet" />
-
+ 
 
 
 </head>
@@ -70,9 +66,12 @@
             <br><br><br><br>
             <div align="center">
                 <h4>@Model.Evento</h4>
-                <!--<p>Descripcion</p>-->
+           
 
-                <p>@Model.Local</p>
+                @if (Model.Local != null){
+                    <p>@Model.Local</p>
+
+                }
                 <p>@Model.Direccion - @Model.Lugar</p>
 
                 <strong>@Model.Fecha</strong>
@@ -83,7 +82,7 @@
 
             <div id="codBarra" class="mainBar"></div>
         </div>
-
+        
     </div>
 
 
@@ -97,7 +96,7 @@
 
 
 
-      $(".qrblock").qrcode({
+     $(".qrblock").qrcode({
         render: 'div',
         size: 80,
         color: '#3A3',
@@ -158,9 +157,6 @@
         width: 700px;
         height: 245px;
         border: 1px solid black;
-        /*  background-image: url("../../Images/plantilla2.png");*/
-        /*  background: url('Url.Content('~/Images/plantilla2.png')') no-repeat;*/
-        /* background: url("~/Images/plantilla2.png") no-repeat;*/
     }
 
         #ticket .bloques {
